[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/confirm_dialog.gd" type="Script" id=1]
[ext_resource path="res://sound/close_menu.wav" type="AudioStream" id=2]
[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://sound/focus_in.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/press_button.wav" type="AudioStream" id=6]
[ext_resource path="res://theme/menu_panel_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/popup_menu.tres" type="Theme" id=8]
[ext_resource path="res://theme/button.tres" type="Theme" id=9]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="ConfirmDialog" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -81.0
margin_right = 136.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_styles/panel = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 270.0
margin_bottom = 168.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 268.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "press a button"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 268.0
margin_bottom = 59.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 268.0
margin_bottom = 119.0
custom_constants/margin_right = 8
custom_constants/margin_top = 16
custom_constants/margin_left = 8
custom_constants/margin_bottom = 16

[node name="Message" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 16.0
margin_right = 260.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "something something something"
align = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 268.0
margin_bottom = 127.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 268.0
margin_bottom = 159.0

[node name="Deny" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 51.0
margin_bottom = 28.0
theme = ExtResource( 9 )
shortcut = SubResource( 2 )
text = "cancel"

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 216.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 252.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 48, 24 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "ok"

[node name="ButtonMouseEntered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "UI"

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "UI"

[node name="MenuClosed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
bus = "UI"

[connection signal="popup_hide" from="." to="." method="_on_MessageDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Deny" to="." method="_on_Deny_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
